--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -31,7 +31,7 @@
         font-weight: 300;
         a {
             color: $main-color;
-            transition: 0.5s all
+            transition: 0.5s all;
             text-transform: uppercase;
             text-decoration: underline;
             &:hover {
