--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -15,4 +15,10 @@
         margin-top: 67px;
         font-size: 16px;
     }
+    &_submit {
+        width: 300px;
+        height: 55px;
+        font-size: 16px;
+        margin: 0;
+    }
 }
