--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -10,6 +10,7 @@
     }
     &__header {
         color: #ffffff;
+        margin: 0;
         font-size: 42px;
         line-height: 36px;
         font-weight: 700;
@@ -17,6 +18,7 @@
     }
     &__subheader {
         color: #ffffff;
+        margin: 0;
         margin-top: 17px;
         font-size: 24px;
         line-height: 25px;
