--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -7,6 +7,7 @@
         display: flex;
         justify-content: space-around;
         margin-top: 65px;
+        flex-wrap: wrap;
     }
     &__item {
         display: flex;
