adapted consultation section

--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -97,4 +97,10 @@
             margin-bottom: 50px;
         }
     }
+    .consultation {
+        height: 100vh;
+        &__descr {
+            margin-top: 50px;
+        }
+    }
 }
