--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -15,6 +15,14 @@
             padding-right: 10px;
         }
     }
+    ul.slick-dots {
+        margin: 0 auto;
+    }
+    .catalog {
+        &__content {
+            justify-content: space-around;
+        }
+    }
 }
 @media (max-width: 767px) {
     .container {
