--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,7 +15,7 @@
 @import 'blocks/forms';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
-
+@import 'blocks/reviews';
 
 
 @import 'base/media';
