--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -9,6 +9,14 @@
     font-size: 12px;
     font-weight: 500;
     text-transform: uppercase;
+    transition: 0.1s all;
+    &:hover {
+        box-shadow: 1px 1px 5px 2px #000;
+        border-bottom: 2px solid $main-dark-color;
+        border-right: 1px solid $main-dark-color;
+        border-top: 2px solid $main-color;
+        border-left: 1px solid $main-color;
+    }
     &_main {
         width: 300px;
         height: 50px;
@@ -25,5 +33,8 @@
         width: 131px;
         height: 40px;
         font-size: 14px;
+        &:hover {
+            box-shadow: 1px 1px 5px 2px $main-dark-color;
+        }
     }
 }
