--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -1,3 +1,62 @@
 .footer {
     height: 630px;
+    position: relative;
+    &__info {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 460px;
+        height: 270px;
+        background-color: $main-color;
+        padding: 50px 68px 60px 68px;
+    }
+    &__addr {
+        margin-bottom: 36px;
+        color: #ffffff;
+        font-size: 20px;
+        line-height: 20px;
+        font-weight: 500;
+        text-align: center;
+    }
+    &__phone {
+        display: block;
+        margin-bottom: 38px;
+        color: #ffffff;
+        font-size: 20px;
+        line-height: 20px;
+        font-weight: 700;
+        text-align: center;
+        &:hover {
+            color: #fff;
+        }
+    }
+    &__social {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 210px;
+        margin: 0 auto;
+    }
+    &__social-item {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50px;
+        height: 50px;
+        border: 2px solid #ffffff;
+        border-radius: 100%; 
+        transition: 0.2s all;
+        img {
+            height: 27px;
+        }
+        &:hover {
+            box-shadow: 0px 0px 20px 5px #fff;
+            transition: 0.2s all;
+            img {
+                transition: 0.15s all;
+                height: 30px;
+            }
+        }
+    }
 }
