--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,6 @@
 @import 'blocks/carousel';
 @import 'blocks/catalog';
 @import 'blocks/reviews';
-
+@import 'blocks/footer';
 
 @import 'base/media';
