--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -11,11 +11,11 @@
     text-transform: uppercase;
     transition: 0.1s all;
     &:hover {
-        box-shadow: 1px 1px 5px 2px #000;
-        border-bottom: 2px solid $main-dark-color;
-        border-right: 1px solid $main-dark-color;
-        border-top: 2px solid $main-color;
-        border-left: 1px solid $main-color;
+        box-shadow: 0 0 5px 2px $main-dark-color inset;
+        outline: none;
+    }
+    &:active {
+        box-shadow: 1px 1px 5px 2px #000 inset;
     }
     &_main {
         width: 300px;
@@ -33,8 +33,5 @@
         width: 131px;
         height: 40px;
         font-size: 14px;
-        &:hover {
-            box-shadow: 1px 1px 5px 2px $main-dark-color;
-        }
     }
 }
