--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -9,4 +9,13 @@
         line-height: 22px;
         font-weight: 500;
     }
+    .error {
+        border: 1px solid red;
+    }
+    label.error {
+        color: #fff;
+        border: none;
+        text-align: center;
+        margin-bottom: 20px;
+    }
 }
