--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -133,6 +133,9 @@
                 transform: translateX(-100%);
                 margin-left: 0;
             }
+            ul {
+                padding-left: 0;            
+            }
             li {
                 position: relative;
                 color: #555555;
