--- a/src/sass/blocks/_pageup.scss
+++ b/src/sass/blocks/_pageup.scss
@@ -5,6 +5,8 @@
     right: 40px;
     width: 40px;
     height: 40px;
+    background: rgba(255,255,255,0.25);
+    box-shadow: 0px 0px 10px 10px rgba(255,255,255,0.25);
     img {
         width: 100%;
     }
