--- a/src/sass/blocks/_pageup.scss
+++ b/src/sass/blocks/_pageup.scss
@@ -1,12 +1,14 @@
 .pageup {
+    z-index: 9;
     display: none;
     position: fixed;
     bottom: 40px;
     right: 40px;
     width: 40px;
     height: 40px;
-    background: rgba(255,255,255,0.25);
-    box-shadow: 0px 0px 10px 10px rgba(255,255,255,0.25);
+    border-radius: 100%;
+    background: rgba(255,255,255,0.4);
+    box-shadow: 0px 0px 10px 10px rgba(255,255,255,0.4);
     img {
         width: 100%;
     }
